--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,7 +11,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <fileType name="Basic" implementationClass="porokhin.bstruct.BasicFileType" fieldName="INSTANCE"
-                  language="Basic" extensions="bas" hashBangs="*.bas;*.mb"/>
+                  language="BasicLanguage2" extensions="bas;mb" />
         <!-- Add your extensions here -->
     </extensions>
 
